syntax = "proto3";

option csharp_namespace = "Pantheon.Athena.Grpc.Common";


message PantheonIdentity {
  bytes id = 1;
  string deviceId = 2;
  string username = 3;
  repeated string scopes = 4;
}